iota.log
*** Error compiling 'iota/command_line/iota_single_image.py'...
  File "iota/command_line/iota_single_image.py", line 163
    except Exception, e:
                    ^
SyntaxError: invalid syntax

*** Error compiling 'iota/components/iota_cctbx_ha14.py'...
  File "iota/components/iota_cctbx_ha14.py", line 535
    except Exception, e:
                    ^
SyntaxError: invalid syntax

*** Error compiling 'iota/components/iota_processing.py'...
  File "iota/components/iota_processing.py", line 112
    except Exception, e:
                    ^
SyntaxError: invalid syntax

*** Error compiling 'iota/components/iota_threads.py'...
  File "iota/components/iota_threads.py", line 1113
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

*** Error compiling 'iota/components/iota_utils.py'...
  File "iota/components/iota_utils.py", line 649
    except Exception, e:
                    ^
SyntaxError: invalid syntax

